<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="373dp"
        android:layout_height="113dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/read_words_text"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="450dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/textView">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_hint"
            android:layout_width="263dp"
            android:layout_height="match_parent"
            android:hint="@string/read_words_input_text"
            app:boxStrokeColor="#2F9D2424">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_mad_word"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foregroundTint="#EF95FF"
                android:outlineAmbientShadowColor="#F34E4E"
                android:outlineSpotShadowColor="#F34E4E"
                android:shadowColor="#B34242"
                android:textColor="#680909"
                android:textColorHighlight="#871919"
                android:textColorHint="#BC5149"
                android:textColorLink="#682F2F"
                android:textCursorDrawable="@android:color/holo_red_light"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_read_words_ok"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:outlineAmbientShadowColor="#B199DA"
            android:outlineSpotShadowColor="#B199DA"
            android:shadowColor="#5B096A"
            android:text="@string/read_words_btn_text"
            android:textColor="#611610"
            android:textColorHighlight="#985EFF"
            android:textColorHint="#A97DF8"
            android:textColorLink="#AB80F6"
            android:textCursorDrawable="@android:color/holo_purple"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_view_words_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="47dp"
        android:text="@string/read_words_left_text"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/text_view_input_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="398dp"
        android:text="@string/read_words_instructions_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="88dp"
        android:contentDescription="@string/read_words_img_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/madlibs3" />

</androidx.constraintlayout.widget.ConstraintLayout>