<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.uan.madlibsgame.ui.IntroActivity">


    <ImageView
        android:id="@+id/imageViewIntro"
        android:layout_width="328dp"
        android:layout_height="360dp"
        android:layout_marginStart="10dp"

        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/intro_img_desc"
        android:src="@mipmap/madlibs"
        app:layout_constraintBottom_toTopOf="@+id/text_slideshow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_slideshow"
        android:layout_width="386dp"
        android:layout_height="136dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/intro_text"
        android:textAlignment="gravity"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.718" />

    <Button
        android:id="@+id/btn_get_started"
        android:layout_width="233dp"
        android:layout_height="61dp"
        android:layout_marginStart="162dp"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="58dp"
        android:text="@string/intro_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_slideshow" />
</androidx.constraintlayout.widget.ConstraintLayout>